fix(window): align content with title text

--- a/packages/default/scss/window/_layout.scss
+++ b/packages/default/scss/window/_layout.scss
@@ -1,7 +1,7 @@
 // TODO: extract or remove modal variables
 $modal-title-padding: 1em !default;
 $modal-title-line-height: 1.2em !default;
-$modal-inner-padding: .5em !default;
+$modal-inner-padding: $modal-title-padding !default;
 $modal-overlay-color: #000 !default;
 
 @include exports("window/layout") {
